--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src='https://cdn.jsdelivr.net/lodash/4.17.2/lodash.min.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script src="bundle.js"></script>
           
 </body>
 </html>
