--- a/login.html
+++ b/login.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <form name="submit-to-google-sheet">
-    <label for="Name"></label>
+    <label for="Name">Name</label>
     <input name="Name" id="Name" ></input>
-    <label for="Number"></label>
+    <label for="Number">Number</label>
     <input name="Number" id="Number"></input>
-    <label for="Image"></label>
+    <label for="Image">Image URL</label>
     <input name="Image" id="Image"></input>
-    <label for="Category"></label>
+    <label for="Category">Category</label>
     <input name="Category" id="Category"></input>
     <div id='success'></div>
     <button type="submit">Add user</button>
