--- a/test/sheet1.html
+++ b/test/sheet1.html
@@ -47,7 +47,7 @@ table td {
 </head>
 
 <body>
-<script  data-cfasync="false" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script  data-cfasync="false" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    
 <div class="container mt-5 mb-5">
   <h3>Create Records</h3>
