--- a/login.html
+++ b/login.html
@@ -17,19 +17,9 @@
   
   <div class="row">
     <div class="col s12">
-      <div class="col s3"></div>
-      <div class="col s5 forma hide" style="margin-top: 5rem !important;">
-        <form name="submit-to-google-sheet">
-          <label for="Name">Name</label>
-          <input name="Name" id="Name" ></input>
-          <label for="Number">Number</label>
-          <input name="Number" id="Number"></input>
-          <label for="Image">Image URL</label>
-          <input name="Image" id="Image"></input>
-          <label for="Category">Category</label>
-          <input name="Category" id="Category"></input>
-          <div id='success'></div>
-          <button class="btn-large waves-effect black white-text" type="submit">Add stock</button>
+      <div class="col s1"></div>
+      <div class="col s11 forma hide" style="margin-top: 5rem !important;">
+        <iframe src="https://script.google.com/macros/s/AKfycbzGPccmm6eM_FkMAL2VgD9x8rgrTq6scinabXQ99uW4x1IPmJYlFxBlBw/exec" frameborder="0" width="1500px" height="1200px"></iframe>
       </div>
     </div>
   </div>
@@ -45,19 +35,9 @@
   <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
 
-  </form>
- 
-  <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbz1vLM7oAOu8oouefEDNAyX_2Fd4JrgcxRWHk9sTMm5RJJ-BtaTGP6R0w/exec'
-    const form = document.forms['submit-to-google-sheet']
   
-    form.addEventListener('submit', e => {
-      e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => console.log('Success!', response))
-        .catch(error => console.error('Error!', error.message))
-    })
-  </script>
+
+  
   
   <script src="login.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
