--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 
               </ul>
             </div>
-            <div class="col s5" style="margin-top:11rem !important">
-              <a class="waves-effect grey darken-3 waves-light btn-small">Checkout</a>
+            <div class="col s5" style="margin-top:5rem !important">
+              <p>Total</p>
+              <p class="total"></p>
+              <a class="waves-effect grey darken-3 checkout waves-light btn-small">Checkout</a>
             </div>
           </div>
         </div>
