--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   
   data-item-name="Recharghing">
   Add to cart
-</button>
+    </button>
   </div>
   
   <div class="stonks2 s12 grey darken-4 center " style="height: 30rem !important; padding: 4rem;">
@@ -96,14 +96,14 @@
     <h2 class="white-text">LiGHTNiNG!</h2> 
     
     <button class="snipcart-add-item btn-large black orda"
-  data-item-id="lightning"
-  data-item-price="18.69"
-  data-item-url="/"
-  data-item-description="You are born to explore with the latest Wariiri Watch."
-  
-  data-item-name="Lightning">
-  Add to cart 
-</button>
+      data-item-id="lightning"
+      data-item-price="18.69"
+      data-item-url="/"
+      data-item-description="You are born to explore with the latest Wariiri Watch."
+      <a id="anchor-name">The  name where you want to jump</a>
+      data-item-name="Lightning">
+      Add to cart 
+    </button>
   </div>
   
   <footer class="page-footer black" id="contact">
