--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <li>
             <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
             <div class="caption center-align">
-              <h2 class="huracan">Wariiri Stick</h2>
-              <h4 class="light grey-text text-lighten-3 huracan2 hide-on-med-and-down">STRiDE WiTH LiGHTNiNG!</h4>
+              <h2 class="huracan"> STRIDE WITH</h2>
+              <h5 class="huracan2 hide-on-med-and-down">LiGHTNiNG!</h4>
             </div>
           </li>
           <li>
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Contact</h5>
-          <!-- <p class="grey-text ">mischie_robert@yahoo.com</p> -->
+         
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
@@ -125,7 +125,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2021 Copyright Robert Mischie
+      © 2020-2022, Wariirilabs.com
       
       </div>
     </div>
