--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           <li>
             <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
             <div class="caption center-align">
-              <h2 class="huracan"> STRIDE WITH</h2>
-              <h5 class="huracan2 hide-on-med-and-down">LiGHTNiNG!</h4>
+              <h5 class="huracan2 hide-on-med-and-down">STRIDE WITH</h4>
+              <h2 class="huracan">LiGHTNiNG!</h2>
+              
             </div>
           </li>
           <li>
