--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <ul class="slides">
           <li>
             <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
-            <div class="caption left-align">
-              <h5 class="huracan2 hide-on-med-and-down">STRIDE WITH</h5>
+            <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
               
             </div>
