--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
+              <h3 class="huracan">Imagine.Explore.</h3>
               
             </div>
           </li>
