--- a/index.html
+++ b/index.html
@@ -49,8 +49,17 @@
             <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
-              <h5 class="huracan2">in your hand</h5>
+              <h5 class="huracan2">in your hand.</h5>
               
+               <button class="snipcart-add-item btn-large black orda"
+      data-item-id="lightning"
+      data-item-price="18.69"
+      data-item-url="/"
+      data-item-description="You are born to explore with the latest Wariiri Watch."
+      <a id="anchor-name">
+      Add to cart 
+    </button>
+  </div>
             </div>
           </li>
           <li>
@@ -95,18 +104,7 @@
   <div class="stonks2 s12 grey darken-4 center " style="height: 30rem !important; padding: 4rem;">
     <h5 class="white-text">STRiDE WiTH</h5> 
     <h2 class="white-text">LiGHTNiNG!</h2> 
-    
-    <button class="snipcart-add-item btn-large black orda"
-      data-item-id="lightning"
-      data-item-price="18.69"
-      data-item-url="/"
-      data-item-description="You are born to explore with the latest Wariiri Watch."
-      <a id="anchor-name">The  name where you want to jump</a>
-      data-item-name="Lightning">
-      Add to cart 
-    </button>
-  </div>
-  
+
   <footer class="page-footer black" id="contact">
     <div class="container black">
       <div class="row">
