--- a/index.html
+++ b/index.html
@@ -86,15 +86,11 @@
   
 
 
-  <footer class="page-footer black" id="contact">
-    <div class="container black">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Contact</h5>
+  
          
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="white-text">Contact Wariirilabs</h5>
           <ul>
             <li><a class="grey-text text-lighten-3" target="_blank" href="https://www.instagram.com/wariirilabs/"><i class="fab fa-instagram"></i>wariirilabs</a></li>
             
