--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
     </button>
   </div>
   
+<footer class="page-footer black" id="contact">
+    <div class="container black">
+      <div class="row">
+        <div class="col l6 s12">
 
-
-  
          
         </div>
         <div class="col l4 offset-l2 s12">
