--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2020-2022, Wariirilabs.com <h5 class="white-text">Contact Wariirilabs</h5>
-          <ul>
+      © 2020-2022, Wariirilabs.com <ul>
             <li><a class="grey-text text-lighten-3" target="_blank" href="https://www.instagram.com/wariirilabs/"><i class="fab fa-instagram"></i>wariirilabs</a></li>
       
       </div>
