--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   
   
   <div class="stonks s12 grey darken-4 center " style="height: 30rem !important; padding: 4rem;">
-    <h2 class="white-text">Recharghing... </h2> <br>
-    <p class="white-text">Power to you</p>
+    <h2 class="white-text">RECHARGING... </h2> <br>
+    <p class="white-text">Power to you.</p>
     
     <button class="snipcart-add-item btn-large black orda"
   data-item-id="recharge"
