--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   
   
   <div class="stonks s12 grey darken-4 center " style="height: 30rem !important; padding: 4rem;">
+    <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
     <h2 class="white-text">RECHARGING... </h2> <br>
     <p class="white-text">Power to you.</p>
     
