--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
 
 
 
+  <div class="col s12 header" >
+    <div class="slider">
+        <ul class="slides">
+          <li>
+            <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
+            <div class="caption centre-align">
+              <h2 class="huracan">RECHARGING...</h2>
+              <h5 class="huracan2">Power to you</h5>
+
+         <button class="snipcart-add-item btn-large black orda"
+      data-item-id="lightning"
+      data-item-price="18.69"
+      data-item-url="/"
+      data-item-description="You are born to explore with the latest Wariiri Watch."
+      <a id="anchor-name">
+      Add to cart 
+    </button>
+  </div>
+</div>
 
         
   
