--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <div class="slider">
         <ul class="slides">
           <li>
-
+<body style="background-color:red;">
+</body>
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
               <h5 class="huracan2">in your hand.</h5>
