--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="slider">
         <ul class="slides">
           <li>
-<body style="background-color:red;">
+<body style="background-color:white;">
 </body>
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
