--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul class="slides">
           <li>
             <img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
-            <div class="caption centre-align">
+            <div class="caption left-align">
               <h2 class="huracan">RECHARGING...</h2>
               <h5 class="huracan2">Power to you</h5>
 
