--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="slider">
         <ul class="slides">
           <li>
-<img src="https://cdn.hasselblad.com/980b2184352abde6136ae4f1f702ccb1e80a3b33_earth-view-from-moon-nasa.jpg">
+<img src="Web capture_6-2-2022_235539_www.instagram.com">
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
               <h5 class="huracan2">in your hand.</h5>
