--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="slider">
         <ul class="slides">
           <li>
-<img src="Web capture_6-2-2022_235539_www.instagram.com">
+<img src="![Web capture_6-2-2022_235539_www instagram com](https://user-images.githubusercontent.com/84543373/156031069-2d1d445a-26ef-42a2-aab3-d351d1a75cb1.jpeg)">
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
               <h5 class="huracan2">in your hand.</h5>
