--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul class="slides">
           <li>
             
-            ![](images/Web capture_6-2-2022_235539_www.instagram.com.jpeg)
+            ![](images/Web%20capture_6-2-2022_235539_www.instagram.com.jpeg)
   
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
