--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="slider">
         <ul class="slides">
           <li>
-            
-            ![](images/Web%20capture_6-2-2022_235539_www.instagram.com.jpeg)
+            ❮img src="Web%20capture_6-2-2022_235539_www.instagram.com.jpeg" ❯
+        
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
               <h5 class="huracan2">in your hand.</h5>
