--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css
 
 
+                             
 
   ">
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.0/default/snipcart.css" />
@@ -46,7 +47,7 @@
     <div class="slider">
         <ul class="slides">
           <li>
-            ❮img src="Web%20capture_6-2-2022_235539_www.instagram.com.jpeg" ❯
+            ❮img src="/Web%20capture_6-2-2022_235539_www.instagram.com.jpeg"❯
         
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
