--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
     <div class="slider">
         <ul class="slides">
           <li>
-            ❮img src="/Web%20capture_6-2-2022_235539_www.instagram.com.jpeg"❯
+            ❮img src="//lightningatthebeach.jpeg"width="100"❯
         
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
               <h5 class="huracan2">in your hand.</h5>
-
-         <button class="snipcart-add-item btn-large black orda"
+              <button class="snipcart-add-item btn-large black orda"
       data-item-id="lightning"
       data-item-price="18.69"
       data-item-url="/"
