--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul class="slides">
           <li>
             
-            
+            <body>
             ❮img src="/lightningatthebeach.jpeg"width="100"❯
             <div class="caption right-align">
               <h2 class="huracan">LiGHTNiNG!</h2>
@@ -63,7 +63,7 @@
     </button>
   </div>
 </div>
-
+</body>
 
 
   <div class="col s12 header" >
