--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul class="slides">
           <li>
             
-            !(lightningatthebeach.jpeg)
+            !(/lightningatthebeach.jpeg)
          
              <div class="caption right-align">
              <h2 class="huracan">LiGHTNiNG!</h2>
