--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="navbar-fixed">
     <nav>
       <div  class="nav-wrapper white ">
-        <a href="#" class="brand-logo truncate black-text left-align"><div class="wariri"></div></a>
+        <a href="#" class="brand-logo truncate black-text caption left-align"><div class="wariri"></div></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down black-text">
           
           
