--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <div class="navbar-fixed">
     <nav>
       <div  class="nav-wrapper white ">
-        <a href="#" class="brand-logo truncate black-text left "><div class="wariri"></div></a>
+        <body style="background-color:#FF0000;">
+</body>
+        <a href="#" class="brand-logo truncate black-text left "><div class="wariiri"></div></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down black-text">
           
           
