--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav>
       <div  class="nav-wrapper white ">
   
-        <a href="#" class="brand-logo truncate black-text left "><div class="wariiri"></div></a>
+        <a href="#" class="brand-logo truncate black-text left "><div class="wariri"></div></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down black-text">
         <body style="background-color:#FF0000;">
  
