--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
   
   <title>Document</title>
 </head>
-<body class="black" >
+<body class="white" >
   <div class="navbar-fixed">
     <nav>
       <div  class="nav-wrapper white ">
   
         <a href="#" class="brand-logo truncate black-text left "><div class="wariri"></div></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down black-text">
-        <body style="background-color:#FF0000;">
  
           
           <li><a class=" black-text" href="btn-floating"><i class="material-icons flash">flash_on</i></a></li>
@@ -135,5 +134,4 @@
   
           
 </body>
- </body> 
 </html>
