--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <ul class="slides">
           <li>
             
-             !(/lightningatthebeach.jpeg)
+             <img href="https://github.com/wariirilabs/waririlabs/blob/main/lightning.jpeg">
              <div class="caption right-align">
              <h2 class="huracan">LiGHTNiNG!</h2>
              <h5 class="huracan2">in your hand.</h5> 
-              <button class="snipcart-add-item btn-large black orda"
+             <button class="snipcart-add-item btn-large black orda"
                       
       data-item-id="lightning"
       data-item-price="18.69"
