--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul class="slides">
           <li>
             
-             <img href="https://github.com/wariirilabs/waririlabs/blob/main/lightning.jpeg">
+             <img src="https://github.com/wariirilabs/waririlabs/blob/main/lightning.jpeg">
              <div class="caption right-align">
              <h2 class="huracan">LiGHTNiNG!</h2>
              <h5 class="huracan2">in your hand.</h5> 
