--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul class="slides">
           <li>
             
-             <h2> Background Image </h2>
+             <img src="https://github.com/wariirilabs/waririlabs/blob/main/lightning.png" alt="Girl in a jacket" width="500" height="600">
              <div class="caption right-align">
              <h2 class="huracan">LiGHTNiNG!</h2>
              <h5 class="huracan2">in your hand.</h5> 
